--- a/src/index.css
+++ b/src/index.css
@@ -1,97 +1,4 @@
-/* @import "tailwindcss";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-.progress[value] {
-  -webkit-appearance: none;
-  appearance: none;
-
-  width: 100%;
-  height: 12px;
-}
-
-.progress[value]::-webkit-progress-bar {
-  background-color: rgba(33, 34, 44, 0.2);
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-}
-
-.progress[value]::-webkit-progress-value {
-  border-radius: 10px;
-  background-color: #d3a0fa;
-} */
-
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -125,6 +32,32 @@ button:focus-visible {
 }
 
 body {
+  font-family: "DM sans";
   background-color: var(--color-background);
   color: var(--color-text1);
+}
+
+.text-preset-1 {
+  font-size: 64px;
+  font-weight: bold;
+}
+
+.text-preset-1-mobile {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.text-preset-2 {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.text-preset-3 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.text-preset-4 {
+  font-size: 16px;
+  font-weight: 500;
 }
